// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity/ActivityContainer Empty smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-5 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-17cy2p8-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5jb75g-MuiPaper-root">
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiBox-root css-19midj6">
      <p class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-ii1goy-MuiTypography-root"
         data-testid="empty"
      >
        No activity found for the last week.
        <br>
        <br>
        You will see here important events related to the rollout of your updates. Stay tuned!
      </p>
    </div>
  </div>
</div>
`;

exports[`activity/ActivityContainer List smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-10 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-17cy2p8-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5jb75g-MuiPaper-root">
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-listTitle-11 css-1s23nr9-MuiTypography-root">
          Wednesday, May 13, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-h4y409-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-15 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#00d3ff"
                            d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-13 css-1s23nr9-MuiTypography-root">
                      ABC
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-14 css-b4h4sf-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-15 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#00d3ff"
                            d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-13 css-1s23nr9-MuiTypography-root">
                      DEF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-14 css-b4h4sf-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiTablePagination-root css-jtlhu6-MuiTablePagination-root">
          <div class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar stable-makeStyles-toolbar-6 css-78c6dr-MuiToolbar-root-MuiTablePagination-toolbar">
            <div class="MuiTablePagination-spacer css-1psng7p-MuiTablePagination-spacer">
            </div>
            <p class="MuiTablePagination-selectLabel stable-makeStyles-selectLabel-8 css-tjonbb-MuiTablePagination-selectLabel"
               id=":r1:"
            >
              Rows per page:
            </p>
            <div class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-input css-1iqud9t-MuiInputBase-root-MuiTablePagination-select">
              <div tabindex="0"
                   role="combobox"
                   aria-controls=":r2:"
                   aria-expanded="false"
                   aria-haspopup="listbox"
                   aria-labelledby=":r1: :r0:"
                   id=":r0:"
                   class="MuiSelect-select MuiTablePagination-select stable-makeStyles-select-7 MuiSelect-standard MuiInputBase-input css-194a1fa-MuiSelect-select-MuiInputBase-input"
              >
                5
              </div>
              <input aria-invalid="false"
                     aria-hidden="true"
                     tabindex="-1"
                     class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                     value="5"
              >
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="ArrowDropDownIcon"
              >
                <path d="M7 10l5 5 5-5z">
                </path>
              </svg>
            </div>
            <p class="MuiTablePagination-displayedRows stable-makeStyles-displayedRows-9 css-m2d60k-MuiTablePagination-displayedRows">
              1–2 of 2
            </p>
            <div class="MuiTablePagination-actions">
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="previous page"
                      title="Go to previous page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowLeftIcon"
                >
                  <path d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z">
                  </path>
                </svg>
              </button>
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="next page"
                      title="Go to next page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowRightIcon"
                >
                  <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z">
                  </path>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`activity/ActivityContainer MultipleDays smoke-test 1`] = `
<div class="MuiGrid-root MuiGrid-container stable-makeStyles-sectionHeader-20 css-eei0dj-MuiGrid-root">
  <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
    <div class="MuiBox-root css-2rlxtj">
      <h1 class="MuiTypography-root MuiTypography-h1 css-17cy2p8-MuiTypography-root">
        Activity
      </h1>
    </div>
  </div>
</div>
<div class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5jb75g-MuiPaper-root">
  <div class="MuiBox-root css-1kbmarl">
    <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-listTitle-21 css-1s23nr9-MuiTypography-root">
          Wednesday, May 13, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-h4y409-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-25 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#00d3ff"
                            d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-23 css-1s23nr9-MuiTypography-root">
                      ABC
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-24 css-b4h4sf-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-25 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#00d3ff"
                            d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-23 css-1s23nr9-MuiTypography-root">
                      DEF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-24 css-b4h4sf-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.0
              </div>
            </div>
          </li>
        </ul>
        <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-listTitle-21 css-1s23nr9-MuiTypography-root">
          Thursday, May 14, 2020
        </p>
        <ul class="MuiList-root MuiList-padding css-h4y409-MuiList-root">
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-25 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#22bb00"
                            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-23 css-1s23nr9-MuiTypography-root">
                      DEB
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-24 css-b4h4sf-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.1
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-25 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#ff5500"
                            d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-23 css-1s23nr9-MuiTypography-root">
                      DOF
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-24 css-b4h4sf-MuiTypography-root">
                  02:55 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel beta is now pointing to version 0.0.1
              </div>
            </div>
          </li>
          <li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-25 css-15u9cok-MuiListItem-root">
            <div class="MuiGrid-root MuiGrid-container css-1oukqxz-MuiGrid-root">
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-17p3wh3-MuiGrid-root">
                <div class="MuiBox-root css-geek62">
                  <div class="MuiBox-root css-12z0wuy">
                    <svg xmlns="http://www.w3.org/2000/svg"
                         focusable="false"
                         width="30px"
                         height="30px"
                         preserveaspectratio="xMidYMid meet"
                         viewbox="0 0 24 24"
                         style="transform: rotate(360deg);"
                    >
                      <path fill="#22bb00"
                            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42Z"
                      >
                      </path>
                    </svg>
                  </div>
                  <div class="MuiBox-root css-0">
                    <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-23 css-1s23nr9-MuiTypography-root">
                      DAL
                    </p>
                  </div>
                </div>
              </div>
              <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-1o7apob-MuiGrid-root">
                <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-24 css-b4h4sf-MuiTypography-root">
                  02:56 PM
                </p>
              </div>
              <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
                Channel alpha is now pointing to version 0.0.1
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root">
        <div class="MuiTablePagination-root css-jtlhu6-MuiTablePagination-root">
          <div class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar stable-makeStyles-toolbar-16 css-78c6dr-MuiToolbar-root-MuiTablePagination-toolbar">
            <div class="MuiTablePagination-spacer css-1psng7p-MuiTablePagination-spacer">
            </div>
            <p class="MuiTablePagination-selectLabel stable-makeStyles-selectLabel-18 css-tjonbb-MuiTablePagination-selectLabel"
               id=":r4:"
            >
              Rows per page:
            </p>
            <div class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-input css-1iqud9t-MuiInputBase-root-MuiTablePagination-select">
              <div tabindex="0"
                   role="combobox"
                   aria-controls=":r5:"
                   aria-expanded="false"
                   aria-haspopup="listbox"
                   aria-labelledby=":r4: :r3:"
                   id=":r3:"
                   class="MuiSelect-select MuiTablePagination-select stable-makeStyles-select-17 MuiSelect-standard MuiInputBase-input css-194a1fa-MuiSelect-select-MuiInputBase-input"
              >
                5
              </div>
              <input aria-invalid="false"
                     aria-hidden="true"
                     tabindex="-1"
                     class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                     value="5"
              >
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="ArrowDropDownIcon"
              >
                <path d="M7 10l5 5 5-5z">
                </path>
              </svg>
            </div>
            <p class="MuiTablePagination-displayedRows stable-makeStyles-displayedRows-19 css-m2d60k-MuiTablePagination-displayedRows">
              1–5 of 6
            </p>
            <div class="MuiTablePagination-actions">
              <button class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="-1"
                      type="button"
                      disabled
                      aria-label="previous page"
                      title="Go to previous page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowLeftIcon"
                >
                  <path d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z">
                  </path>
                </svg>
              </button>
              <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-zylse7-MuiButtonBase-root-MuiIconButton-root"
                      tabindex="0"
                      type="button"
                      aria-label="next page"
                      title="Go to next page"
              >
                <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                     focusable="false"
                     aria-hidden="true"
                     viewbox="0 0 24 24"
                     data-testid="KeyboardArrowRightIcon"
                >
                  <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z">
                  </path>
                </svg>
                <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
